Make sure we exit the clipboard select() loop when the request completes, regardless of whether it got any data.  Fixes UI hangs (bug 226267).  r=darin, sr=blizzard, a=asa.